--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,17 +5,31 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron: "0 0 * * SUN"
 
 jobs:
-  build-n-publish:
-    name: Build and publish Python distribution
-    runs-on: ubuntu-18.04
+  ci:
+    name: CI
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+        python-version:
+          - 3.7
+          - 3.8
+          - 3.9
     steps:
-      - uses: actions/checkout@master
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v1
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3.7
+          python-version: ${{matrix.python-version}}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
