added coverage to 82 perc

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,3 +42,5 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Build binary wheel and a source tarball
         run: python setup.py sdist
+      - name: Run unit tests
+        run: python -m pytest --cov=delta_migrations tests/
